# order-checker

./: .gitignore  Cargo.toml  README.md  out.txt  out2.txt  out3.txt  out5.txt  out6.txt  package-lock.json  package.json  phase2_results.txt  run-reset.bat  tailwind.config.js  test_query.rs  worder-checkerreset-skipped-deliveries.sql
.cargo/: config.toml
frontend/: index.html  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: dashboard.js
frontend/src/: api.ts  main.ts  state.ts  types.ts  utils.ts
frontend/src/styles/: app.css
frontend/src/ui/: accounts-tab.ts  accounts.ts  analytics.ts  orders.ts  settings-tab.ts  sidebar.ts  sync.ts  tabs.ts  theme.ts  titlebar.ts  tracking.ts
frontend/styles/: tailwind.css
migrations/: 001_initial_schema.sql  002_raw_emails.sql  003_tracking_info.sql  004_tracking_cache.sql  005_accounts.sql  006_fix_line_items_duplicates.sql  007_shipped_date.sql  008_fix_shipped_date.sql  009_profile_picture.sql  010_indexes.sql  011_clear_processed_bodies.sql  012_images.sql  013_image_thumbnails.sql  014_fix_order_dates.sql  015_pagination_indexes.sql
src/: auth.rs  images.rs  lib.rs  main.rs  process.rs  reset_deliveries.rs
src-cli/: main.rs  parse_email_file.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/db/: mod.rs
src/ingestion/: gmail.rs  mod.rs
src/models/: mod.rs
src/parsing/: mod.rs
src/tracking/: mod.rs
src/web/: mod.rs
templates/: dashboard.html
