[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "walmart-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Order Reconciler Team"]
description = "High-performance dashboard to track Walmart orders from email parsing"

[lib]
path = "src/lib.rs"

[[bin]]
name = "walmart-cli"
path = "src-cli/main.rs"

[dependencies]
# Async utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"
num_cpus = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# HTML Parsing
scraper = "0.18"
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"

# Gmail API (using versions compatible with google-gmail1 v5)
google-gmail1 = "5"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# Environment
dotenvy = "0.15"
dirs = "5"

# Cryptographic hashing for account token paths
sha2 = "0.10"

# Secure credential storage (Windows Credential Manager / macOS Keychain / Linux Secret Service)
keyring = "2"

# Base64 decoding for email content
base64 = "0.21"

# MIME decoding (quoted-printable)
quoted_printable = "0.5"

# HTTP client with browser impersonation for anti-bot bypass
# Use git versions to match track17-rs dependencies
wreq = { git = "https://github.com/0x676e67/wreq", features = ["cookies", "json"] }
wreq-util = { git = "https://github.com/0x676e67/wreq-util" }
rand = "0.9.2"
urlencoding = "2"
url = "2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rembg-rs = { git = "https://github.com/WarRaft/rembg-rs" }
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
track17-rs = { path = "../tracking-public-api" }
mailparse = "0.16.1"

[profile.release]
codegen-units = 16
lto = "fat"
# panic = "abort"  # Disabled: allow catch_unwind for graceful ONNX failure recovery
strip = true

[dev-dependencies]
tokio-test = "0.4"

[patch.crates-io]
wreq = { git = "https://github.com/0x676e67/wreq" }
